...
                android:drawableLeft="@android:drawable/ic_lock_silent_mode_off"
                android:backgroundTint="@color/black"
                android:text="@string/select_alarm_sound"

                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/alarm_delete_button"
                android:layout_width="0dp"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:layout_height="match_parent"
                android:background="@color/gray"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
...
